<resources>
    <string name="app_name">PracticaIntermodular</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tWLogin">LOG IN</string>
    <string name="eTUsuario">Usuario (DNI)</string>
    <string name="btLogin">Iniciar Sesión</string>
    <string name="tWInicio">¡Bienvenidos al gestor!</string>
    <string name="btConsultarProductos">Consultar Productos</string>
    <string name="btGestionVentas">Gestionar Ventas</string>
    <string name="twEscogeOpcion">Escoge una opción para continuar</string>
    <string name="btnInsertarVenta">Insertar Venta</string>
    <string name="etIDVenta">ID Venta</string>
    <string name="eTFechaVenta">Fecha Venta</string>
    <string name="eTIDCliente">ID Cliente</string>
    <string name="eTIDProducto">ID Producto</string>
    <string name="eTCantidad">Cantidad</string>
    <string name="btnConsultarXFechas">Consultar por Fecha</string>
    <string name="btnConsultarXNif">Consultar por NIF</string>
    <string name="btnConsultarXClave">Consultar por ID</string>
    <string name="btnEliminarVenta">Eliminar Venta</string>
    <string name="btnConsultarProductos">Consultar Productos</string>
    <string name="eTFecha1">Fecha inicial</string>
    <string name="eTFecha2">Fecha final</string>
    <string name="eTNIF">NIF del cliente</string>
    <string name="eTClaveVenta">ID Venta</string>


</resources>