<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadIntermedia"
    android:background="@drawable/fondoprueba">

    <TextView
        android:id="@+id/twEscogeOpcion"
        android:layout_width="229dp"
        android:layout_height="85dp"
        android:text="@string/twEscogeOpcion"
        android:textAlignment="center"
        android:textColor="#E8F2FA"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <Button
        android:id="@+id/btConsultarProductos"
        android:layout_width="341dp"
        android:layout_height="68dp"
        android:backgroundTint="#E6C504"
        android:text="@string/btConsultarProductos"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/btGestionVentas"
        android:layout_width="330dp"
        android:layout_height="74dp"
        android:backgroundTint="#E6C504"
        android:text="@string/btGestionVentas"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />


</androidx.constraintlayout.widget.ConstraintLayout>