<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GetVentasFechaFragment"
    android:background="@drawable/fondoprueba">


    <TextView
        android:id="@+id/twConsultarventaXFecha"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="start|top"
        android:layout_marginStart="65dp"
        android:layout_marginTop="90dp"
        android:background="#E6C504"
        android:textColor="#E8F2FA"
        android:text="@string/btnConsultarXFechas"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFecha1"
        android:layout_width="260dp"
        android:layout_height="79dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="text"
        android:text="@string/eTFecha1"
        android:textColor="#E8F2FA"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="70dp"
        android:layout_marginTop="190dp"
        />

    <EditText
        android:id="@+id/etFecha2"
        android:layout_width="260dp"
        android:layout_height="79dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="text"
        android:text="@string/eTFecha2"
        android:textColor="#E8F2FA"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="70dp"
        android:layout_marginTop="250dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="338dp"
        android:layout_height="277dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="340dp" />

    <Button
        android:id="@+id/btnConsultarFechaXVentas"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:textColor="#E6C504"
        android:backgroundTint="#E8F2FA"
        android:text="@string/btnConsultarXFechas"
        android:textSize="30sp"
        android:textStyle="bold" />

</FrameLayout>